--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     
 <div id="app">
     <h1> {{message}} </h1>
+    <!--<img src="./img/st,small,507x507-pad,600x600,f8f8f8.u3.jpg" alt=""> -->
+    <img v-bind:src="path + image"/> 
 </div>
 
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="./main.js"></script>
+
+
 
 </body>
 </html>
